--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <main>
         <form>
-            <label for="gridWidth">Grid Width:</label>
-            <input type="text" name="gridWidth" value="16">
-            <input type="button" value="Create">
+            <!-- <label for="gridWidth">Grid Width:</label>
+            <input type="text" name="gridWidth" value="16"> -->
+            <input type="button" value="CREATE GRID">
         </form>
         <div class="grid-container"></div>
     </main>
