index.html/script.js: added span element in the label element for grid size which syncs to the grid size input value.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <form>
             <div class="grid">
                 <h2>GRID SIZE</h2>
-                <label for="size">100
+                <label for="size">
+                    <span>100</span>
                     <span>&nbsp;X&nbsp;</span>
                     <input id="size" type="number" name="grid-size" value="" placeholder="100">
                 </label>
